--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
   <packaging>jar</packaging>
   <version>1.0</version>
   <name>app</name>
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
